Fixed white space in announcements (Firefox) with 'inline-block' instead of 'block'

--- a/site_files/app/themes/sass/partials/_boxyframe/frontend-structure.sass
+++ b/site_files/app/themes/sass/partials/_boxyframe/frontend-structure.sass
@@ -228,11 +228,11 @@ div#announcements
   width: 980px
 
   a
-    display: block
+    display: inline-block
      
   a:hover
     border: none
-    display: block
+    display: inline-block
 
 
 div.announcement-tail
