--- a/site_files/app/themes/sass/partials/_fancynancy/frontend-structure.sass
+++ b/site_files/app/themes/sass/partials/_fancynancy/frontend-structure.sass
@@ -241,11 +241,11 @@ div#announcements
   overflow: hidden
 
   a
-    display: block
+    display: inline-block
     
   a:hover
     border: none
-    display: block
+    display: inline-block
 
 
 div.announcement-tail
