--- a/site_files/app/themes/sass/partials/_hill/frontend-structure.sass
+++ b/site_files/app/themes/sass/partials/_hill/frontend-structure.sass
@@ -255,11 +255,11 @@ div#announcements
   width: 1000px
 
   a
-    display: block
+    display: inline-block
   
   a:hover
     border: none
-    display: block
+    display: inline-block
 
 
 div.announcement-tail
