--- a/site_files/app/themes/sass/partials/_pills/frontend-structure.sass
+++ b/site_files/app/themes/sass/partials/_pills/frontend-structure.sass
@@ -203,11 +203,11 @@ div#announcements
   position: relative
 
   a
-    display: block
+    display: inline-block
   
   a:hover
     border: none
-    display: block
+    display: inline-block
 
 
 div.announcement-tail
