--- a/site_files/app/themes/sass/partials/_redsign/frontend-structure.sass
+++ b/site_files/app/themes/sass/partials/_redsign/frontend-structure.sass
@@ -232,11 +232,11 @@ div#announcements
   width: 730px
 
   a
-    display: block
+    display: inline-block
 
   a:hover
     border: none
-    display: block
+    display: inline-block
 
 
 div.announcement-tail
