--- a/site_files/app/themes/sass/partials/_tidypresent/frontend-structure.sass
+++ b/site_files/app/themes/sass/partials/_tidypresent/frontend-structure.sass
@@ -215,11 +215,11 @@ div#announcements
   width: 940px
 
   a
-    display: block
+    display: inline-block
 
   a:hover
     border: none
-    display: block
+    display: inline-block
 
 
 div.announcement-tail
