--- a/site_files/app/themes/sass/themes/ajtg/frontend-structure.sass
+++ b/site_files/app/themes/sass/themes/ajtg/frontend-structure.sass
@@ -260,11 +260,11 @@ div#announcements
   @include enable-ie-css3
 
   a
-    display: block
+    display: inline-block
 
   a:hover
     border: none
-    display: block
+    display: inline-block
 
 
 div.announcement-tail
